--- a/public/.styles/perlite.css
+++ b/public/.styles/perlite.css
@@ -1,4 +1,69 @@
+.grenLineUp{
+  width:100%;
+  height: 33vh;
+}
+/* Bases */
+.bases-toolbar .bases-toolbar-item{
+  display: flex;
+  overflow:hidden;
+}
+.bases-toolbar .bases-toolbar-views{
+  display: flex;
+  overflow:hidden;
+}
+.bases-toolbar .bases-toolbar-res{
+  display: flex;
+  overflow:hidden;
+  margin-inline-end: auto;
+  white-space: nowrap;
+}
+.bases-toolbar{
+  display: flex;
+  align-items: center;
+    gap: 4px;
+}
+.bases-view{
+  position: relative;
+  width: 100%;
+}
+.bases-result-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.bases-item{
+  padding: 2px;
+  width:300px;
+  min-height: 25vh;
+  display:flex;
+  flex-direction: column;
+}
+.bases-img{
+  background: #242424;
+  width: 100%;
+  /* height: 50%; */
+  background-size:cover;
+  object-fit: cover;
+}
+.bases-cover{
+  background: #242424;
+  width: 100%;
+  background-size:cover;
+  object-fit: cover;
+  flex-grow: 1;
+}
+.bases-title{
+  background: #242424;
+  padding: 4px;
+  background-size:cover;
+}
+.text-button-label {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-inline-end: var(2px);
+    padding-inline-start: var(2px);
+}
 .logo {
   position: fixed;
   top: 8px;
